openmediavault-netatalk (0.3.0.5) stable; urgency=low

  * Add 'Allow plain passwords' option.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 14 Jul 2012 01:45:51 +0200

openmediavault-netatalk (0.3.0.4) stable; urgency=low

  * Update locales.
  * Mantis 0000522: Improve DNS Service Discovery management.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 18 Jun 2012 19:18:24 +0200

openmediavault-netatalk (0.3.0.3) stable; urgency=low

  * Update locales.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 25 May 2012 21:44:21 +0200

openmediavault-netatalk (0.3.0.2) stable; urgency=low

  * Update locales.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 03 May 2012 21:13:02 +0200

openmediavault-netatalk (0.3.0.1) stable; urgency=low

  * Update locales.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 26 Apr 2012 22:43:03 +0200

openmediavault-netatalk (0.3) stable; urgency=low

  * Adapt to openmediavault 0.3

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 02 Apr 2012 22:25:29 +0200

openmediavault-netatalk (0.2.6) stable; urgency=low

  * Mantis 0000374: mDNS/DNS-SD
  * Fix bug in configuration files

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 08 Feb 2012 11:06:14 +0100

openmediavault-netatalk (0.2.5) stable; urgency=low

  * Adapt package to new upstream version (netatalk 2.2.1)

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 06 Feb 2012 19:55:43 +0100

openmediavault-netatalk (0.2.4) stable; urgency=low

  * Fix config import issues

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 28 Dec 2011 12:46:37 +0100

openmediavault-netatalk (0.2.3.1) stable; urgency=low

  * Improve monitoring implementation (via monit)

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 09 Dec 2011 19:57:46 +0100

openmediavault-netatalk (0.2.3) stable; urgency=low

  * Improve monitoring implementation (via monit)
