@@ -1,6 +1,8 @@
 openmediavault-netatalk (0.3.0.5) stable; urgency=low
 
+  * Update locales.
   * Add 'Allow plain passwords' option.
+  * Mantis 0000543: Add ability to enable/disable user home folders.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sat, 14 Jul 2012 01:45:51 +0200
 
